--- a/Used_Car_Prediction.ipynb
+++ b/Used_Car_Prediction.ipynb
@@ -37,7 +37,7 @@
    "id": "6d11296f-5d1f-4d82-acc7-84aa5d092a18",
    "metadata": {},
    "source": [
-    "## **Data Importation**"
+    "## **Data Importation and Preprocessing**"
    ]
   },
   {
@@ -389,8 +389,322 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "6a9407fe-b941-4d5f-a2db-6893f98e0358",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(54273, 13)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#getting the shape of our training data\n",
+    "df_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2aaf039a-a29a-4b1d-9199-a9b1526f9065",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(36183, 12)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#getting the shape of our test data\n",
+    "df_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a04ce301-1b51-4a4f-9422-a6ca98ad98a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 54273 entries, 0 to 54272\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column        Non-Null Count  Dtype \n",
+      "---  ------        --------------  ----- \n",
+      " 0   id            54273 non-null  int64 \n",
+      " 1   brand         54273 non-null  object\n",
+      " 2   model         54273 non-null  object\n",
+      " 3   model_year    54273 non-null  int64 \n",
+      " 4   milage        54273 non-null  int64 \n",
+      " 5   fuel_type     54273 non-null  object\n",
+      " 6   engine        54273 non-null  object\n",
+      " 7   transmission  54273 non-null  object\n",
+      " 8   ext_col       54273 non-null  object\n",
+      " 9   int_col       54273 non-null  object\n",
+      " 10  accident      54273 non-null  object\n",
+      " 11  clean_title   54273 non-null  object\n",
+      " 12  price         54273 non-null  int64 \n",
+      "dtypes: int64(4), object(9)\n",
+      "memory usage: 5.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "#getting the information summary on our training dataset\n",
+    "df_train.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e9af49a7-b223-4007-9e2c-63b6dd0f0e0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 36183 entries, 0 to 36182\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column        Non-Null Count  Dtype \n",
+      "---  ------        --------------  ----- \n",
+      " 0   id            36183 non-null  int64 \n",
+      " 1   brand         36183 non-null  object\n",
+      " 2   model         36183 non-null  object\n",
+      " 3   model_year    36183 non-null  int64 \n",
+      " 4   milage        36183 non-null  int64 \n",
+      " 5   fuel_type     36183 non-null  object\n",
+      " 6   engine        36183 non-null  object\n",
+      " 7   transmission  36183 non-null  object\n",
+      " 8   ext_col       36183 non-null  object\n",
+      " 9   int_col       36183 non-null  object\n",
+      " 10  accident      36183 non-null  object\n",
+      " 11  clean_title   36183 non-null  object\n",
+      "dtypes: int64(3), object(9)\n",
+      "memory usage: 3.3+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "#getting the information summary on our test data\n",
+    "df_test.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "25495482-30ca-4ce5-9043-c487035fdf30",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id              0\n",
+       "brand           0\n",
+       "model           0\n",
+       "model_year      0\n",
+       "milage          0\n",
+       "fuel_type       0\n",
+       "engine          0\n",
+       "transmission    0\n",
+       "ext_col         0\n",
+       "int_col         0\n",
+       "accident        0\n",
+       "clean_title     0\n",
+       "price           0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#checking for missing values\n",
+    "df_train.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8a883d6e-6297-40e2-adc8-70a414b846b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id              0\n",
+       "brand           0\n",
+       "model           0\n",
+       "model_year      0\n",
+       "milage          0\n",
+       "fuel_type       0\n",
+       "engine          0\n",
+       "transmission    0\n",
+       "ext_col         0\n",
+       "int_col         0\n",
+       "accident        0\n",
+       "clean_title     0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#checking for our test data\n",
+    "df_test.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fbfce2c6-bb04-4bb5-8e23-8bd073792514",
+   "metadata": {},
+   "source": [
+    "**No missing values and all data types are correct**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "db5b763f-4e55-4a91-bd52-d4a812391292",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <td>54273.0</td>\n",
+       "      <td>27136.000000</td>\n",
+       "      <td>15667.409917</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>13568.0</td>\n",
+       "      <td>27136.0</td>\n",
+       "      <td>40704.0</td>\n",
+       "      <td>54272.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>model_year</th>\n",
+       "      <td>54273.0</td>\n",
+       "      <td>2015.091979</td>\n",
+       "      <td>5.588909</td>\n",
+       "      <td>1974.0</td>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>2024.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>milage</th>\n",
+       "      <td>54273.0</td>\n",
+       "      <td>72746.175667</td>\n",
+       "      <td>50469.490448</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>32268.0</td>\n",
+       "      <td>66107.0</td>\n",
+       "      <td>102000.0</td>\n",
+       "      <td>405000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>price</th>\n",
+       "      <td>54273.0</td>\n",
+       "      <td>39218.443333</td>\n",
+       "      <td>72826.335535</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>15500.0</td>\n",
+       "      <td>28000.0</td>\n",
+       "      <td>45000.0</td>\n",
+       "      <td>2954083.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              count          mean           std     min      25%      50%  \\\n",
+       "id          54273.0  27136.000000  15667.409917     0.0  13568.0  27136.0   \n",
+       "model_year  54273.0   2015.091979      5.588909  1974.0   2012.0   2016.0   \n",
+       "milage      54273.0  72746.175667  50469.490448   100.0  32268.0  66107.0   \n",
+       "price       54273.0  39218.443333  72826.335535  2000.0  15500.0  28000.0   \n",
+       "\n",
+       "                 75%        max  \n",
+       "id           40704.0    54272.0  \n",
+       "model_year    2019.0     2024.0  \n",
+       "milage      102000.0   405000.0  \n",
+       "price        45000.0  2954083.0  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#getting the descriptive summary of our training dataset\n",
+    "df_train.describe().T"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a087f08d-8242-4d23-b733-69ee8a99e0c7",
+   "metadata": {},
+   "source": [
+    "**The standard deviation for our target variable price is far above the mean which means that there is high variability in the price of the used cars**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ccdc185-4370-4565-a8cb-74c64b24d4c0",
    "metadata": {},
    "outputs": [],
    "source": []
