--- a/Used_Car_Prediction.ipynb
+++ b/Used_Car_Prediction.ipynb
@@ -41,6 +41,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d3734b45-54fd-4b04-ba7b-bcee86dca3a1",
+   "metadata": {},
+   "source": [
+    "In this section, I will be importing the dataset, performing explorat"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "f15575f2-475d-41a8-b907-f1f47c380789",
@@ -54,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a66729bd-695b-4d76-a39a-c5662c5e8ea5",
    "metadata": {},
    "outputs": [
@@ -209,7 +217,7 @@
        "4   7850  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "b6f1625c-fd04-4e26-8ff3-bd1283307bc5",
    "metadata": {},
    "outputs": [
@@ -377,7 +385,7 @@
        "4  At least 1 accident or damage reported         Yes  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "6a9407fe-b941-4d5f-a2db-6893f98e0358",
    "metadata": {},
    "outputs": [
@@ -399,7 +407,7 @@
        "(54273, 13)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "2aaf039a-a29a-4b1d-9199-a9b1526f9065",
    "metadata": {},
    "outputs": [
@@ -421,7 +429,7 @@
        "(36183, 12)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "a04ce301-1b51-4a4f-9422-a6ca98ad98a3",
    "metadata": {},
    "outputs": [
@@ -471,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "e9af49a7-b223-4007-9e2c-63b6dd0f0e0d",
    "metadata": {},
    "outputs": [
@@ -508,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "25495482-30ca-4ce5-9043-c487035fdf30",
    "metadata": {},
    "outputs": [
@@ -531,7 +539,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "8a883d6e-6297-40e2-adc8-70a414b846b9",
    "metadata": {},
    "outputs": [
@@ -565,7 +573,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "db5b763f-4e55-4a91-bd52-d4a812391292",
    "metadata": {},
    "outputs": [
@@ -683,7 +691,7 @@
        "price        45000.0  2954083.0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
