--- a/Used_Car_Prediction.ipynb
+++ b/Used_Car_Prediction.ipynb
@@ -991,6 +991,26 @@
    "cell_type": "markdown",
    "id": "594574f4-2718-4d62-a5bc-11110e27c4f6",
    "metadata": {},
+   "source": [
+    "I will be changing the \"-\" sign to not supported"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0bd1867-ebe0-4870-896f-773053820bf3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_test[\"fuel_type\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "534741a5-1dc9-42b6-8d12-3023708647a9",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
