--- a/Used_Car_Prediction.ipynb
+++ b/Used_Car_Prediction.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "ca21b2a9-1de0-415a-8e21-384c7e0b0a9d",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "f15575f2-475d-41a8-b907-f1f47c380789",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "a66729bd-695b-4d76-a39a-c5662c5e8ea5",
    "metadata": {},
    "outputs": [
@@ -305,7 +305,7 @@
        "4   7850  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "b6f1625c-fd04-4e26-8ff3-bd1283307bc5",
    "metadata": {},
    "outputs": [
@@ -473,7 +473,7 @@
        "4  At least 1 accident or damage reported         Yes  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "6a9407fe-b941-4d5f-a2db-6893f98e0358",
    "metadata": {},
    "outputs": [
@@ -495,7 +495,7 @@
        "(54273, 13)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "2aaf039a-a29a-4b1d-9199-a9b1526f9065",
    "metadata": {},
    "outputs": [
@@ -517,7 +517,7 @@
        "(36183, 12)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "id": "a04ce301-1b51-4a4f-9422-a6ca98ad98a3",
    "metadata": {},
    "outputs": [
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "id": "e9af49a7-b223-4007-9e2c-63b6dd0f0e0d",
    "metadata": {},
    "outputs": [
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "id": "25495482-30ca-4ce5-9043-c487035fdf30",
    "metadata": {},
    "outputs": [
@@ -627,7 +627,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "id": "8a883d6e-6297-40e2-adc8-70a414b846b9",
    "metadata": {},
    "outputs": [
@@ -661,7 +661,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "id": "db5b763f-4e55-4a91-bd52-d4a812391292",
    "metadata": {},
    "outputs": [
@@ -779,7 +779,7 @@
        "price        45000.0  2954083.0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "id": "d2b7205b-c12a-43f5-aab9-ba398a2cffe1",
    "metadata": {},
    "outputs": [
@@ -822,7 +822,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "id": "95076fea-2490-4182-899c-eafe47a907a5",
    "metadata": {},
    "outputs": [
@@ -856,7 +856,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -893,6 +893,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "id": "e71d4d66-ee30-47a2-87d6-7f6961aa0c11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fuel = df_train[\"fuel_type\"].loc[:19]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91c81796-a29c-4584-a08d-aefc1159edc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fuel"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "ff1f5f8a-f47d-464c-b797-17395a4588ec",
    "metadata": {},
@@ -901,9 +921,9 @@
     "#visualizing the model year column\n",
     "\n",
     "plt.figure(figsize=(20,9)) # Set the width and height of the figure\n",
-    "\n",
+    "fuel = df_train[\"fuel_type\"].loc[:19]\n",
     "#bar chart showing the sale for each category \n",
-    "sns.countplot(df_train[\"model_year\"], palette=\"viridis\")\n",
+    "sns.countplot(fuel[\"fuel_type\"], palette=\"viridis\")\n",
     "#title\n",
     "plt.title(\"Manufacturing Year of Vehicles\")\n",
     "plt.xticks(rotation=90)\n",
@@ -959,56 +979,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "8343eade-7e08-4dba-9f44-2c4f551882c3",
+   "execution_count": 1,
+   "id": "534741a5-1dc9-42b6-8d12-3023708647a9",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "fuel_type\n",
-       "Gasoline          49439\n",
-       "Hybrid             1766\n",
-       "E85 Flex Fuel      1479\n",
-       "Diesel             1109\n",
-       "–                   294\n",
-       "Plug-In Hybrid      182\n",
-       "not supported         4\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'plt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#visualing the distribution of accident column\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mplt\u001b[49m\u001b[38;5;241m.\u001b[39mfigure(figsize \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m10\u001b[39m,\u001b[38;5;241m8\u001b[39m))\n\u001b[1;32m      3\u001b[0m sns\u001b[38;5;241m.\u001b[39mcountplot(df_train[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maccident\u001b[39m\u001b[38;5;124m\"\u001b[39m], palette \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrocket\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m plt\u001b[38;5;241m.\u001b[39mtitle(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDistribution of Vehicle Accidents\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'plt' is not defined"
+     ]
     }
    ],
    "source": [
-    "#investigating the fuel type column further\n",
-    "df_train[\"fuel_type\"].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "594574f4-2718-4d62-a5bc-11110e27c4f6",
-   "metadata": {},
-   "source": [
-    "I will be changing the \"-\" sign to not supported"
+    "#visualing the distribution of accident column\n",
+    "plt.figure(figsize = (10,8))\n",
+    "sns.countplot(df_train[\"accident\"], palette = \"rocket\")\n",
+    "plt.title(\"Distribution of Vehicle Accidents\")\n",
+    "plt.show();"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0bd1867-ebe0-4870-896f-773053820bf3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_test[\"fuel_type\"].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "534741a5-1dc9-42b6-8d12-3023708647a9",
+   "id": "2fe368bc-aef6-4175-b22e-0405b6bf0d34",
    "metadata": {},
    "outputs": [],
    "source": []
