--- a/Used_Car_Prediction.ipynb
+++ b/Used_Car_Prediction.ipynb
@@ -951,7 +951,7 @@
     "* If the value of skewness is positive then it is skewed to the right\n",
     "* If the value of skewness is negative then it is skewed to the left.\n",
     "\n",
-    "Using the above yardstick, our Milage column is right skewed, the "
+    "Using the above yardstick, our Milage and Price columns are both right skewed, the Vehicle modely year column is left skewed."
    ]
   },
   {
@@ -1092,7 +1092,44 @@
    "id": "dd437477-de82-46e8-aeb5-051851f7e0d5",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#visualizing all the numerical columns in our dataset\n",
+    "for column in num:\n",
+    "    sns.displot(df_train[column], kde = True)\n",
+    "    plt.title(f\"Distribution of Vehicle {column}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92b2a29d-1c99-4f10-9ae2-eb1b78cd14e1",
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "785eb47a-2d40-47da-98e1-ca934eb621ae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38e9ba66-1a91-42c1-a9e5-08d95d59a397",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "025faa41-bcba-4103-b59d-21b77c1837dd",
+   "metadata": {},
+   "source": [
+    "### **Bivariate Analysis**"
+   ]
   }
  ],
  "metadata": {
