--- a/Used_Car_Prediction.ipynb
+++ b/Used_Car_Prediction.ipynb
@@ -92,21 +92,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "id": "ca21b2a9-1de0-415a-8e21-384c7e0b0a9d",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-06-07 15:00:23.191246: I external/local_tsl/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-06-07 15:00:24.116015: I external/local_tsl/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-06-07 15:00:26.186291: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-06-07 15:00:29.392113: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -121,6 +110,8 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error\n",
     "import tensorflow as tf\n",
@@ -1225,43 +1216,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "568ea689-45fd-42e7-9964-e2093a42065c",
+   "execution_count": 37,
+   "id": "0ff20ce3-dc92-43d8-8cc6-c561716b048a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>brand</th>\n",
+       "      <th>model</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>milage</th>\n",
+       "      <th>fuel_type</th>\n",
+       "      <th>engine</th>\n",
+       "      <th>transmission</th>\n",
+       "      <th>ext_col</th>\n",
+       "      <th>int_col</th>\n",
+       "      <th>accident</th>\n",
+       "      <th>clean_title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ford</td>\n",
+       "      <td>F-150 Lariat</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>74349</td>\n",
+       "      <td>Gasoline</td>\n",
+       "      <td>375.0HP 3.5L V6 Cylinder Engine Gasoline Fuel</td>\n",
+       "      <td>10-Speed A/T</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>Gray</td>\n",
+       "      <td>None reported</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>BMW</td>\n",
+       "      <td>335 i</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>80000</td>\n",
+       "      <td>Gasoline</td>\n",
+       "      <td>300.0HP 3.0L Straight 6 Cylinder Engine Gasoli...</td>\n",
+       "      <td>6-Speed M/T</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>None reported</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jaguar</td>\n",
+       "      <td>XF Luxury</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>91491</td>\n",
+       "      <td>Gasoline</td>\n",
+       "      <td>300.0HP 4.2L 8 Cylinder Engine Gasoline Fuel</td>\n",
+       "      <td>6-Speed A/T</td>\n",
+       "      <td>Purple</td>\n",
+       "      <td>Beige</td>\n",
+       "      <td>None reported</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>BMW</td>\n",
+       "      <td>X7 xDrive40i</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>2437</td>\n",
+       "      <td>Hybrid</td>\n",
+       "      <td>335.0HP 3.0L Straight 6 Cylinder Engine Gasoli...</td>\n",
+       "      <td>Transmission w/Dual Shift Mode</td>\n",
+       "      <td>Gray</td>\n",
+       "      <td>Brown</td>\n",
+       "      <td>None reported</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Pontiac</td>\n",
+       "      <td>Firebird Base</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>111000</td>\n",
+       "      <td>Gasoline</td>\n",
+       "      <td>200.0HP 3.8L V6 Cylinder Engine Gasoline Fuel</td>\n",
+       "      <td>A/T</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>None reported</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     brand          model  model_year  milage fuel_type  \\\n",
+       "0     Ford   F-150 Lariat        2018   74349  Gasoline   \n",
+       "1      BMW          335 i        2007   80000  Gasoline   \n",
+       "2   Jaguar      XF Luxury        2009   91491  Gasoline   \n",
+       "3      BMW   X7 xDrive40i        2022    2437    Hybrid   \n",
+       "4  Pontiac  Firebird Base        2001  111000  Gasoline   \n",
+       "\n",
+       "                                              engine  \\\n",
+       "0      375.0HP 3.5L V6 Cylinder Engine Gasoline Fuel   \n",
+       "1  300.0HP 3.0L Straight 6 Cylinder Engine Gasoli...   \n",
+       "2       300.0HP 4.2L 8 Cylinder Engine Gasoline Fuel   \n",
+       "3  335.0HP 3.0L Straight 6 Cylinder Engine Gasoli...   \n",
+       "4      200.0HP 3.8L V6 Cylinder Engine Gasoline Fuel   \n",
+       "\n",
+       "                     transmission ext_col int_col       accident clean_title  \n",
+       "0                    10-Speed A/T    Blue    Gray  None reported         Yes  \n",
+       "1                     6-Speed M/T   Black   Black  None reported         Yes  \n",
+       "2                     6-Speed A/T  Purple   Beige  None reported         Yes  \n",
+       "3  Transmission w/Dual Shift Mode    Gray   Brown  None reported         Yes  \n",
+       "4                             A/T   White   Black  None reported         Yes  "
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#encoding our categorical variables using OneHotEncoder\n",
-    "encoder = OneHotEncoder()\n",
-    "#for our train data\n",
-    "encoded_cat_train = encoder.fit_transform(df_train[cat])\n",
+    "# Define the transformers\n",
+    "numeric_transformer = StandardScaler()\n",
+    "categorical_transformer = OneHotEncoder()\n",
     "\n",
-    "#for our test data\n",
-    "encoded_cat_test = encoder.fit_transform(df_test[cat])"
+    "#removing our target variable from the training dataset\n",
+    "df_new_train = df_train.drop([\"id\", \"price\"], axis = 1)\n",
+    "df_new_train.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3426a71f-d979-4743-83d8-8dbb7e94078a",
+   "id": "0e0b740a-ca8d-4038-9cd9-512e7aad5b6c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert the encoded data to a DataFrame for train data\n",
-    "encoded_train_data_array = encoded_cat_train.toarray()\n",
-    "encoded_train_data_df = pd.DataFrame(encoded_train_data_array, columns=encoder.get_feature_names_out(df_train[cat]))\n",
-    "\n",
-    "#concat train data together\n",
-    "new_train = pd.concat([df_train, encoded_train_data_df], axis = 1)\n",
-    "new_train.head()"
+    "#removing our target variable from the testing dataset\n",
+    "df_new_test = df_tr.drop(\"id\", axis = 1)\n",
+    "df_new_test.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "72cc45b6-d2c3-4316-b2f6-9953c326e452",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
