--- a/Used_Car_Prediction.ipynb
+++ b/Used_Car_Prediction.ipynb
@@ -92,10 +92,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "ca21b2a9-1de0-415a-8e21-384c7e0b0a9d",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-06-07 16:02:17.425281: I external/local_tsl/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-06-07 16:02:18.382461: I external/local_tsl/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-06-07 16:02:20.567502: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-06-07 16:02:23.723659: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -1216,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "id": "0ff20ce3-dc92-43d8-8cc6-c561716b048a",
    "metadata": {},
    "outputs": [
@@ -1352,7 +1363,7 @@
        "4                             A/T   White   Black  None reported         Yes  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1369,15 +1380,292 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "0e0b740a-ca8d-4038-9cd9-512e7aad5b6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>brand</th>\n",
+       "      <th>model</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>milage</th>\n",
+       "      <th>fuel_type</th>\n",
+       "      <th>engine</th>\n",
+       "      <th>transmission</th>\n",
+       "      <th>ext_col</th>\n",
+       "      <th>int_col</th>\n",
+       "      <th>accident</th>\n",
+       "      <th>clean_title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Mercedes-Benz</td>\n",
+       "      <td>E-Class E 350</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>73000</td>\n",
+       "      <td>Gasoline</td>\n",
+       "      <td>302.0HP 3.5L V6 Cylinder Engine Gasoline Fuel</td>\n",
+       "      <td>A/T</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Beige</td>\n",
+       "      <td>None reported</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Lexus</td>\n",
+       "      <td>RX 350 Base</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>128032</td>\n",
+       "      <td>Gasoline</td>\n",
+       "      <td>275.0HP 3.5L V6 Cylinder Engine Gasoline Fuel</td>\n",
+       "      <td>8-Speed A/T</td>\n",
+       "      <td>Silver</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>None reported</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mercedes-Benz</td>\n",
+       "      <td>C-Class C 300</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>51983</td>\n",
+       "      <td>Gasoline</td>\n",
+       "      <td>241.0HP 2.0L 4 Cylinder Engine Gasoline Fuel</td>\n",
+       "      <td>7-Speed A/T</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>White</td>\n",
+       "      <td>None reported</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Land</td>\n",
+       "      <td>Rover Range Rover 5.0L Supercharged Autobiogra...</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>29500</td>\n",
+       "      <td>Gasoline</td>\n",
+       "      <td>518.0HP 5.0L 8 Cylinder Engine Gasoline Fuel</td>\n",
+       "      <td>Transmission w/Dual Shift Mode</td>\n",
+       "      <td>White</td>\n",
+       "      <td>White</td>\n",
+       "      <td>At least 1 accident or damage reported</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>BMW</td>\n",
+       "      <td>X6 xDrive40i</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>90000</td>\n",
+       "      <td>Gasoline</td>\n",
+       "      <td>335.0HP 3.0L Straight 6 Cylinder Engine Gasoli...</td>\n",
+       "      <td>8-Speed A/T</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>At least 1 accident or damage reported</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           brand                                              model  \\\n",
+       "0  Mercedes-Benz                                      E-Class E 350   \n",
+       "1          Lexus                                        RX 350 Base   \n",
+       "2  Mercedes-Benz                                      C-Class C 300   \n",
+       "3           Land  Rover Range Rover 5.0L Supercharged Autobiogra...   \n",
+       "4            BMW                                       X6 xDrive40i   \n",
+       "\n",
+       "   model_year  milage fuel_type  \\\n",
+       "0        2014   73000  Gasoline   \n",
+       "1        2015  128032  Gasoline   \n",
+       "2        2015   51983  Gasoline   \n",
+       "3        2018   29500  Gasoline   \n",
+       "4        2020   90000  Gasoline   \n",
+       "\n",
+       "                                              engine  \\\n",
+       "0      302.0HP 3.5L V6 Cylinder Engine Gasoline Fuel   \n",
+       "1      275.0HP 3.5L V6 Cylinder Engine Gasoline Fuel   \n",
+       "2       241.0HP 2.0L 4 Cylinder Engine Gasoline Fuel   \n",
+       "3       518.0HP 5.0L 8 Cylinder Engine Gasoline Fuel   \n",
+       "4  335.0HP 3.0L Straight 6 Cylinder Engine Gasoli...   \n",
+       "\n",
+       "                     transmission ext_col int_col  \\\n",
+       "0                             A/T   White   Beige   \n",
+       "1                     8-Speed A/T  Silver   Black   \n",
+       "2                     7-Speed A/T    Blue   White   \n",
+       "3  Transmission w/Dual Shift Mode   White   White   \n",
+       "4                     8-Speed A/T   White   Black   \n",
+       "\n",
+       "                                 accident clean_title  \n",
+       "0                           None reported         Yes  \n",
+       "1                           None reported         Yes  \n",
+       "2                           None reported         Yes  \n",
+       "3  At least 1 accident or damage reported         Yes  \n",
+       "4  At least 1 accident or damage reported         Yes  "
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#removing our target variable from the testing dataset\n",
+    "df_new_test = df_test.drop(\"id\", axis = 1)\n",
+    "df_new_test.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "2f3713cb-477a-4463-963f-d59a93fd581f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#removing our target variable from the testing dataset\n",
-    "df_new_test = df_tr.drop(\"id\", axis = 1)\n",
-    "df_new_test.head()"
+    "#getting our numeric and categorical features\n",
+    "numeric = df_new_train.select_dtypes(include = \"number\").columns.tolist()\n",
+    "categorical = df_new_train.select_dtypes(include = \"object\").columns.tolist()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "b1408bc4-9420-400e-ad8f-25cf3ea67ed1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler()\n",
+    "\n",
+    "#standardizing for our numeric training data\n",
+    "scaled_train = scaler.fit_transform(df_new_train[numeric])\n",
+    "\n",
+    "#standardizing for our numeric test data\n",
+    "scaled_test = scaler.fit_transform(df_new_test[numeric])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "2edabe7d-f4f8-4790-bab4-d48f9ae9c63e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_new_train_scaled = pd.DataFrame(scaled_train, columns=numeric)\n",
+    "df_new_test_scaled = pd.DataFrame(scaled_test, columns=numeric)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "2a9f8dc2-6892-4fe9-8757-290574fdb8ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#combining the scaled features with my original dataframe and dropping the previous ones\n",
+    "train_new_data = pd.concat([df_new_train_scaled ,df_new_train.select_dtypes(exclude=['float64', 'int64'])], axis = 1)\n",
+    "test_new_data = pd.concat([df_new_test_scaled ,df_new_test.select_dtypes(exclude=['float64', 'int64'])], axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "0d1665f9-7881-4d2d-8d17-042599ecd263",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#preparing our data\n",
+    "encoder = OneHotEncoder()\n",
+    "#for our train data\n",
+    "encoded_cat_train = encoder.fit_transform(train_new_data[categorical])\n",
+    "\n",
+    "#for our test data\n",
+    "encoded_cat_test = encoder.fit_transform(test_new_data[categorical])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "261fefb3-3b26-40ab-9e4f-9d433777d5b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_names = encoder.get_feature_names_out(categorical)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "07f245fb-1105-441b-b5a9-43830d1a8c86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoded_cat_data_array = encoded_cat_train.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "5214b8b5-0b12-44f0-bc3f-2bb6ad7b8172",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Shape of passed values is (54273, 3381), indices imply (54273, 3277)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[39], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Convert the encoded data to a DataFrame for train data\u001b[39;00m\n\u001b[1;32m      2\u001b[0m encoded_cat_data_array \u001b[38;5;241m=\u001b[39m encoded_cat_train\u001b[38;5;241m.\u001b[39mtoarray()\n\u001b[0;32m----> 3\u001b[0m encoded_cat_data_df \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mDataFrame\u001b[49m\u001b[43m(\u001b[49m\u001b[43mencoded_cat_data_array\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mfeature_names\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m#concat train data together\u001b[39;00m\n\u001b[1;32m      6\u001b[0m new_train \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mconcat([encoded_cat_data_df, train_new_data\u001b[38;5;241m.\u001b[39mselect_dtypes(exclude \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mobject\u001b[39m\u001b[38;5;124m\"\u001b[39m)], axis \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m)\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/frame.py:827\u001b[0m, in \u001b[0;36mDataFrame.__init__\u001b[0;34m(self, data, index, columns, dtype, copy)\u001b[0m\n\u001b[1;32m    816\u001b[0m         mgr \u001b[38;5;241m=\u001b[39m dict_to_mgr(\n\u001b[1;32m    817\u001b[0m             \u001b[38;5;66;03m# error: Item \"ndarray\" of \"Union[ndarray, Series, Index]\" has no\u001b[39;00m\n\u001b[1;32m    818\u001b[0m             \u001b[38;5;66;03m# attribute \"name\"\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    824\u001b[0m             copy\u001b[38;5;241m=\u001b[39m_copy,\n\u001b[1;32m    825\u001b[0m         )\n\u001b[1;32m    826\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 827\u001b[0m         mgr \u001b[38;5;241m=\u001b[39m \u001b[43mndarray_to_mgr\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    828\u001b[0m \u001b[43m            \u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    829\u001b[0m \u001b[43m            \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    830\u001b[0m \u001b[43m            \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    831\u001b[0m \u001b[43m            \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    832\u001b[0m \u001b[43m            \u001b[49m\u001b[43mcopy\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcopy\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    833\u001b[0m \u001b[43m            \u001b[49m\u001b[43mtyp\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmanager\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    834\u001b[0m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    836\u001b[0m \u001b[38;5;66;03m# For data is list-like, or Iterable (will consume into list)\u001b[39;00m\n\u001b[1;32m    837\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m is_list_like(data):\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/internals/construction.py:336\u001b[0m, in \u001b[0;36mndarray_to_mgr\u001b[0;34m(values, index, columns, dtype, copy, typ)\u001b[0m\n\u001b[1;32m    331\u001b[0m \u001b[38;5;66;03m# _prep_ndarraylike ensures that values.ndim == 2 at this point\u001b[39;00m\n\u001b[1;32m    332\u001b[0m index, columns \u001b[38;5;241m=\u001b[39m _get_axes(\n\u001b[1;32m    333\u001b[0m     values\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m], values\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m], index\u001b[38;5;241m=\u001b[39mindex, columns\u001b[38;5;241m=\u001b[39mcolumns\n\u001b[1;32m    334\u001b[0m )\n\u001b[0;32m--> 336\u001b[0m \u001b[43m_check_values_indices_shape_match\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvalues\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    338\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m typ \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124marray\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m    339\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28missubclass\u001b[39m(values\u001b[38;5;241m.\u001b[39mdtype\u001b[38;5;241m.\u001b[39mtype, \u001b[38;5;28mstr\u001b[39m):\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/internals/construction.py:420\u001b[0m, in \u001b[0;36m_check_values_indices_shape_match\u001b[0;34m(values, index, columns)\u001b[0m\n\u001b[1;32m    418\u001b[0m passed \u001b[38;5;241m=\u001b[39m values\u001b[38;5;241m.\u001b[39mshape\n\u001b[1;32m    419\u001b[0m implied \u001b[38;5;241m=\u001b[39m (\u001b[38;5;28mlen\u001b[39m(index), \u001b[38;5;28mlen\u001b[39m(columns))\n\u001b[0;32m--> 420\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mShape of passed values is \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpassed\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, indices imply \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mimplied\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mValueError\u001b[0m: Shape of passed values is (54273, 3381), indices imply (54273, 3277)"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert the encoded data to a DataFrame for train data\n",
+    "encoded_cat_data_array = encoded_cat_train.toarray()\n",
+    "encoded_cat_data_df = pd.DataFrame(encoded_cat_data_array, columns=feature_names)\n",
+    "\n",
+    "#concat train data together\n",
+    "new_train = pd.concat([encoded_cat_data_df, train_new_data.select_dtypes(exclude = \"object\")], axis = 1)\n",
+    "new_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "886fd757-5f60-4ed5-8a21-4ef3dbde62a1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
