--- a/Used_Car_Prediction.ipynb
+++ b/Used_Car_Prediction.ipynb
@@ -1594,6 +1594,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "61dc7477-6297-4547-a884-cd673cb5deac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#preparing our data\n",
+    "labelencoder = OneHotEncoder()\n",
+    "#for our train data\n",
+    "encoded_train = labelencoder.fit_transform(train_new_data[categorical])\n",
+    "\n",
+    "#for our test data\n",
+    "encoded_cattest = labelencoder.fit_transform(test_new_data[categorical])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6682a159-6596-4389-b3bd-7d33722a7e23",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b36e93ae-2f36-4cec-a847-402a4f523b41",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 32,
    "id": "0d1665f9-7881-4d2d-8d17-042599ecd263",
    "metadata": {},
